--- a/javascript/package.json
+++ b/javascript/package.json
@@ -23,5 +23,8 @@
   "homepage": "https://github.com/Afaren/dice-scoring#readme",
   "devDependencies": {
     "jasmine": "^3.1.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10"
   }
 }
